force-app/main/default/objects/ComponentSpecification__c/ComponentSpecification__c.object-meta.xml
<CustomObject>
    <label>Component Specification</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Component Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>