force-app/main/default/objects/ComponentSpecification__c/fields/FormattedSpecification__c.field-meta.xml
<CustomField>
    <fullName>FormattedSpecification__c</fullName>
    <label>Formatted Specification</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>