force-app/main/default/objects/ComponentSpecification__c/fields/Related_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Stories__c</fullName>
    <label>Related User Stories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>